tests/parsing/smtlib/v2.6/errors/026_let_bad_var_binding_list_2.expected
File "tests/parsing/smtlib/v2.6/errors/026_let_bad_var_binding_list_2.smt2", line 2, character 14-15:
2 | (assert (let (! (x 42)) true))
                  ^
Error while parsing a term, read the reserved word '!',
      but expected a variable binding of the form "(var term)".
